# reflex-pres

./: Makefile  package.json  pres.cabal  reflex-pres.cabal  stack.yaml
exe/: Main.hs
src/: Common.hs  Main.hs  Tea.hs  Timer.hs  Widget.hs
static/scss/: style.scss
